syntax = "proto3";

option csharp_namespace = "HuppyService.Service.Protos";

import "Protos/database.proto";
import "Protos/shared.proto";

package ReminderProto;

service ReminderProto {
	rpc GetReminder(GetReminderInput) returns (database.models.ReminderModel);
	rpc GetReminderBatch(ReminderBatchInput) returns (ReminderModelCollection);
	rpc GetUserReminders(shared.UserId) returns (ReminderModelCollection);
	rpc GetSortedUserReminders(SortedUserRemindersInput) returns (ReminderModelCollection);
	rpc GetRemindersCount(shared.UserId) returns (shared.Int32);
	rpc AddReminder(database.models.ReminderModel) returns (database.models.ReminderModel);
	rpc RemoveReminder(database.models.ReminderModel) returns (shared.CommonResponse);
	rpc RemoveReminderRange(RemoveReminderRangeInput) returns (shared.CommonResponse);
}

message SortedUserRemindersInput {
	uint64 UserId = 1;
	int32 Skip = 2;
	int32 Take = 3;
}

message GetReminderInput {
	uint64 UserId = 1;
	int32 ReminderId = 2;
}

message ReminderBatchInput {
	uint64 EndDate = 1;
}

message ReminderModelCollection {
	repeated database.models.ReminderModel ReminderModels = 1;
}

message RemoveReminderRangeInput {
	repeated int32 Ids = 1;
}

message RemoveReminderRangeInputString {
	repeated string Ids = 1;
}